RESOLVED FIXED133401
WebCore build fix for webreplay
https://bugs.webkit.org/show_bug.cgi?id=133401
Summary WebCore build fix for webreplay
Zsolt Borbely
Reported 2014-05-30 01:49:52 PDT
Tools/Scripts/build-webkit --efl --web-replay ... /home/bzsolt/webkit/EflWebKit/Source/WebCore/replay/MemoizedDOMResult.cpp: In static member function 'static std::unique_ptr<WebCore::MemoizedDOMResultBase> WebCore::MemoizedDOMResultBase::createFromEncodedResult(const WTF::String&, WebCore::EncodedCType, JSC::EncodedValue, WebCore::ExceptionCode)': /home/bzsolt/webkit/EflWebKit/Source/WebCore/replay/MemoizedDOMResult.cpp:58:1: error: control reaches end of non-void function [-Werror=return-type] cc1plus: all warnings being treated as errors /home/bzsolt/webkit/EflWebKit/Source/WebCore/replay/SerializationMethods.cpp:48:16: error: 'WebCore::KeypressCommand' has not been declared /home/bzsolt/webkit/EflWebKit/Source/WebCore/replay/ReplayController.cpp: In member function 'void WebCore::ReplayController::setForceDeterministicSettings(bool)': /home/bzsolt/webkit/EflWebKit/Source/WebCore/replay/ReplayController.cpp:117:29: error: invalid use of incomplete type 'class WebCore::ScrollingCoordinator' In file included from /home/bzsolt/webkit/EflWebKit/Source/WebCore/inspector/InspectorInstrumentation.h:41:0, from /home/bzsolt/webkit/EflWebKit/Source/WebCore/replay/ReplayController.cpp:39: /home/bzsolt/webkit/EflWebKit/Source/WebCore/page/Page.h:100:7: error: forward declaration of 'class WebCore::ScrollingCoordinator'
Attachments
Proposed patch (2.65 KB, patch)
2014-05-30 01:58 PDT, Zsolt Borbely
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 (612.44 KB, application/zip)
2014-05-30 04:31 PDT, Build Bot
no flags
Proposed patch (2.79 KB, patch)
2014-05-30 07:26 PDT, Zsolt Borbely
darin: review+
darin: commit-queue-
Proposed patch (2.78 KB, patch)
2014-06-02 00:31 PDT, Zsolt Borbely
no flags
Patch for landing (2.78 KB, patch)
2014-06-02 10:25 PDT, Zsolt Borbely
no flags
Zsolt Borbely
Comment 1 2014-05-30 01:58:26 PDT
Created attachment 232285 [details] Proposed patch
Build Bot
Comment 2 2014-05-30 04:31:00 PDT
Comment on attachment 232285 [details] Proposed patch Attachment 232285 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4809824537673728 New failing tests: media/W3C/audio/networkState/networkState_initial.html
Build Bot
Comment 3 2014-05-30 04:31:02 PDT
Created attachment 232291 [details] Archive of layout-test-results from webkit-ews-16 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-16 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Brian Burg
Comment 4 2014-05-30 07:13:52 PDT
Comment on attachment 232285 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=232285&action=review Thanks for fixing these little mistakes. AFAICT, the mac-wk2 failure should be unrelated, though tree is green now. > Source/WebCore/replay/SerializationMethods.cpp:49 > using WebCore::KeypressCommand; Can you instead move this into the other COCOA guarded statement below?
Zsolt Borbely
Comment 5 2014-05-30 07:26:30 PDT
Created attachment 232294 [details] Proposed patch
Darin Adler
Comment 6 2014-05-30 11:56:22 PDT
Comment on attachment 232294 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=232294&action=review > Source/WebCore/replay/MemoizedDOMResult.cpp:60 > + default: > + RELEASE_ASSERT_NOT_REACHED(); > + return nullptr; This should be put outside the switch statement instead of in a default case. Adding a default case turns off the warning we get when we forget to handle a case, and we’d like to leave that on.
Zsolt Borbely
Comment 7 2014-06-02 00:31:57 PDT
Created attachment 232369 [details] Proposed patch
Zsolt Borbely
Comment 8 2014-06-02 10:25:30 PDT
Created attachment 232388 [details] Patch for landing
WebKit Commit Bot
Comment 9 2014-06-02 13:54:31 PDT
Comment on attachment 232388 [details] Patch for landing Clearing flags on attachment: 232388 Committed r169544: <http://trac.webkit.org/changeset/169544>
WebKit Commit Bot
Comment 10 2014-06-02 13:54:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.