WebCore build fix for webreplay https://bugs.webkit.org/show_bug.cgi?id=133401

Patch by Zsolt Borbely <zsborbely.u-szeged@partner.samsung.com> on 2014-06-02
Reviewed by Darin Adler.

* replay/MemoizedDOMResult.cpp:
(WebCore::MemoizedDOMResultBase::createFromEncodedResult):
Add a default nullptr return in order to avoid a gcc warning.
The warning is because of a non-void method that has a case which doesn't return.
* replay/ReplayController.cpp:
(WebCore::ReplayController::setForceDeterministicSettings):
Guard the ScrollingCoordinator with the appropriate #ifdef.
* replay/SerializationMethods.cpp:
Guard the KeypressCommand with COCOA as it is only present there.

Canonical link: https://commits.webkit.org/151484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169544 268f45cc-cd09-0410-ab3c-d52691b4dbfc